--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "body-parser": "^1.16.1",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
-    "mongoose": "^4.8.5"
+    "mongoose": "^4.8.5",
+    "serverless-http": "^2.3.2"
+  },
+  "devDependencies": {
+    "serverless-offline": "^5.12.1"
   }
 }
